tests/badarray3.err
4: error: array required, but int found
	a[2] = 3;
	 ^
