tests/badarray3.juice
// attempting to subscript a scalar destination

int a = 5;
a[2] = 3;
